--- a/image/conf/server.properties
+++ b/image/conf/server.properties
@@ -17,7 +17,14 @@
 ############################# Server Basics #############################
 
 # The id of the broker. This must be set to a unique integer for each broker.
-broker.id=0
+broker.id=-1
+
+#Enable automatic broker id generation on the server?
+#When enabled the value configured for reserved.broker.max.id should be reviewed.
+broker.id.generation.enable=true
+
+#Max number that can be used for a broker.id
+reserved.broker.max.id=10000
 
 ############################# Socket Server Settings #############################
 
